--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t mynameisgan10/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run mynameisgan10/react-test npm test -- --coverage
+  - docker run -e CI=true mynameisgan10/react-test npm test
 
 
 after_success:
