added eb config

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,20 @@ after_success:
   - docker push gandeveloper/multi-worker
 
 
+deploy:
+  provider: elasticbeanstalk
+  region: ap-southeast-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-ap-southeast-1-031599091231
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
+
+
+
+
